# ats-cv-compiler

./: .gitignore  AGENTS.md  LICENSE  README.md  REQUIREMENTS.md  project_layout.md  pyproject.toml
config/: llm.env.example
data/: README.md
docs/: ENTITIES.md  PROJECT_INDEX.md
examples/: README.md
examples/basic/: README.md
examples/basic/data/: education.md  profile.md  skills.md
examples/basic/jobs/: backend_engineer.md
examples/basic/templates/: README.md
jobs/: README.md
prompts/: experience_prompt.md  experience_summary_prompt.md  experience_templates.yaml  pdf_ingest_prompt.md  skills_highlight_prompt.md
scripts/: check_llm_drafts.py  check_projects.py  generate_experience_summary.py  project_index.py  task_index.py
src/cv_compiler/: __init__.py  __main__.py  cli.py  explain.py  pipeline.py  types.py
src/cv_compiler/ingest/: __init__.py  pdf_ingest.py
src/cv_compiler/lint/: __init__.py  linter.py
src/cv_compiler/llm/: __init__.py  base.py  codex.py  config.py  experience.py  manual.py  openai.py  (+2 more)
templates/: README.md
tests/: __init__.py  test_build_example.py  test_cli_job_resolution.py  test_cli_parsing.py  test_codex_exec_config.py  test_experience_loading.py  test_llm_config.py  test_llm_draft_check.py  test_llm_experience_backup.py  test_llm_experience_numbers.py  test_llm_experience_parsing.py  test_llm_experience_role.py  test_llm_manual_provider.py  test_markdown_normalization.py  test_pdf_ingest.py  test_profile_about_me.py  test_project_check.py  test_signatures.py  test_skill_highlights.py  test_skills_filtering.py
(+18 files in other folders)
