[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ats-cv-compiler"
version = "0.1.0"
description = "CLI tool that compiles structured career data into ATS-safe CV PDFs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "fpdf2>=2.8.0",
  "pypdf>=4.2.0",
  "pyyaml>=6.0.2",
]

[project.scripts]
cv = "cv_compiler.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cv_compiler"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]
